<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="text">Enter text</string>
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="email_fdf_gmail_com">Email: fdf@gmail.com</string>
    <string name="version_1_0">Version: 1.0</string>
    <string name="app_description">A really slick mobile app that makes it quick to add tasks, organize them into lists, and add due dates. This is exactly what you need if you are the kind of person who adds things to a list and forgets about them.</string>
    <string name="back_to_home">Back to Home</string>
    <string name="support">Support</string>
    <string name="clear">Clear</string>
    <string name="my_to_do_list">My To Do List</string>
    <string name="delete">Delete</string>
    <string name="add_an_item">Add an Item</string>
    <string name="to_do_list_application">To Do List Application</string>
    <string name="lisence">Licence</string>
    <string name="term_of_use">Term of use</string>
    <string name="term_license">There should be term of use and license</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>