<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermActivity">


    <TableLayout
        android:id="@+id/simpleTableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/firstRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView

                android:id="@+id/term_of_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="@string/term_of_use"
                android:textColor="#000"
                android:textSize="16dp" />

            <TextView

                android:id="@+id/licence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="18dip"
                android:text="@string/lisence"
                android:textColor="#000"
                android:textSize="16dp" />

        </TableRow>
        <TableRow
            android:id="@+id/secondRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_span="2"
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="18dip"
                android:text="@string/term_license"
                android:textColor="#000"
                android:textSize="16dp" />
        </TableRow>

        <TableRow
            android:id="@+id/thirdRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="18dip"
                android:text="@string/version_1_0"
                android:textColor="#000"
                android:textSize="16dp" />
            <TextView
                android:id="@+id/support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="18dip"
                android:text="@string/support"
                android:textColor="#000"
                android:textSize="16dp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>